--- a/css/dialogBox.css
+++ b/css/dialogBox.css
@@ -6,7 +6,7 @@
 .shareLayer img{width:100%;height:100%;}
 .shareLayer2{display:none;position:absolute;z-index:2100;left:0;top:0;width:100%;height:100%;}
 .shareLayer img{width:100%;height:100%;}
-.dialogBox{display:none;position:absolute;z-index:2200;}
+.dialogBox{display:none;position:fixed;z-index:2200;}
 .dialogBox h2{position:relative;z-index:0;height:27px;line-height:27px;text-align:left;text-indent:5px; color: #444; font-weight: normal;}
 .dialogBox h2 .l, .dialogBox h2 .r, .dialogBox h2 .close{float:none;position:absolute;top:0;height:29px;background-image:url(../images/skin_1.png);background-repeat:no-repeat;}
 .dialogBox h2 .l, .dialogBox h2 .r{width:6px;}
